# linreg_ally

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/linreg_ally/: eda.py  linreg_ally.py  models.py  multicollinearity.py  plotting.py
tests/: test_eda.py  test_linreg_ally.py  test_models.py  test_multicollinearity.py  test_multicollinearity_wrong_input.py  test_plotting.py
